# dd2424-text-summarization

./: .gitignore  README.md  bert.ipynb  guild.yml  pyproject.toml  requirements.txt  train_lstm.py
data/: amazon-product-reviews  data_analysis.ipynb  data_cleaning.ipynb
dataload/: .dataloader.py.swp  dataloader.py  load_test.py
lstm/: config.py  data_clean.ipynb  dataloader.py  glove.py  logger.py  model.py  model_attn.py  model_v2.py  train_lstm.py
preprocess/: glove.6B.50d.txt  glove.py  pad_tokenized.py  tokenize_data.py
transformer/: .dataloader.py.swp  PositionalEncoding.py  dataloader.py  generate.py  loss_loggs.json  ola_transformer_model.py  plot_train.py  positional_encoding.py  tokenize_data.py  train.py  train_old.py  transformer_model.py
utils/: glove_embedding.py  pickle.py
