[tool.poetry]
name = "dd2424-text-summarization"
version = "0.1.0"
description = "Course Project for DD2424"
authors = ["erikdao <cuong@neuraltalks.io>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
torch = "^1.8.1"
pytorch-lightning = "^1.3.1"
numpy = "^1.20.2"
pandas = "^1.2.4"
matplotlib = "^3.4.1"
seaborn = "^0.11.1"
pyarrow = "^4.0.0"
sklearn = "^0.0"
transformers = "^4.6.0"
jupyterlab = "^3.0.15"
torchvision = "^0.9.1"
ipywidgets = "^7.6.3"
tqdm = "^4.60.0"
spacy = "^3.0.6"
guildai = "^0.7.3"
torchtext = "^0.9.1"
beautifulsoup4 = "^4.9.3"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
